apply plugin: 'com.android.library'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'android-apt'
apply plugin: 'maven'
apply plugin: 'realm-android'

apply plugin: 'com.github.dcendents.android-maven'

apply plugin: "net.ltgt.errorprone"

version = "1.0.1"
group = "com.github.zeyad-37"

buildscript {
    repositories {
        jcenter()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.10"
    }
}

android {
    compileSdkVersion 25
    buildToolsVersion '25.0.3'
    defaultConfig {
        minSdkVersion 17
        targetSdkVersion 25
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "com.zeyad.usecases.integration.AndroidRobolectricRunner"
    }

    buildTypes {
        debug {
            debuggable true
//            consumerProguardFiles 'proguard-project.txt'
        }
        release {
//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        //lint rules of conduct
        warningsAsErrors true
        abortOnError false
        htmlReport true
        //locations for the rules and output
        lintConfig file("$project.rootDir/tools/rules-lint.xml")
        htmlOutput file("${buildDir}/reports/lint/lint.html")
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        incremental false
    }

    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/rxjava.properties'
    }

    if (project.hasProperty('devBuild')) {
        splits.abi.enable = false
        splits.density.enable = false
        aaptOptions.cruncherEnabled = false
    }
    sourceSets {
        main {
            assets.srcDirs = ['src/main/assets', 'src/main/java/com/zeyad/usecases/assets', 'src/test/java/com/zeyad/usecases/assets']
        }
    }
}

ext {
    supportLibraryVersion = '25.3.1'
    retrofitVersion = '2.3.0'
    okhttpVersion = '3.8.0'
    androidSupportTest = '0.5'
    espressoCore = '2.2.2'
    powerMock = '1.6.6'
    robolectric = '3.3.2'
    okhttpIdelingResourceVersion = '1.0.0'
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    //Job Dispatcher
    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
    // Network
    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
    compile "com.squareup.okhttp3:okhttp:$okhttpVersion"
    compile "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
    compile "com.android.support:support-annotations:$supportLibraryVersion"
    // Rx
    compile 'io.reactivex:rxandroid:1.2.1'
    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
    compile 'io.reactivex:rxjava:1.3.0'
    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
    // Cache
    compile('com.github.lowlevel-studios:storo:1.1.0') {
        transitive = true
    }
    compile 'com.rollbar:rollbar-android:0.2.1'
    // Testing
    testCompile 'junit:junit:4.12'
    testCompile "com.android.support:support-annotations:$supportLibraryVersion"
    testCompile "org.mockito:mockito-core:1.10.19"
    testCompile "org.robolectric:robolectric:$robolectric"
    testCompile "org.robolectric:shadows-support-v4:$robolectric"

    testCompile "org.powermock:powermock-module-junit4:$powerMock"
    testCompile "org.powermock:powermock-module-junit4-rule:$powerMock"
    testCompile "org.powermock:powermock-api-mockito:$powerMock"
    testCompile "org.powermock:powermock-classloading-xstream:$powerMock"

    testCompile "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
    testCompile 'com.github.andrzejchm.RESTMock:android:0.2.2'
    //required to resolve robolectric test problems
    testCompile("com.jakewharton.espresso:okhttp3-idling-resource:$okhttpIdelingResourceVersion") {
        exclude group: 'com.android.support'
    }
}

//apply from: "$project.rootDir/tools/script-git-version.gradle"
apply from: "$project.rootDir/tools/script-findbugs.gradle"
//apply from: "$project.rootDir/tools/script-pmd.gradle"
//apply from: "$project.rootDir/tools/script-java-code-coverage.gradle"
//apply from: "$project.rootDir/tools/script-infer.gradle"
//apply from: "$project.rootDir/tools/script-check-style.gradle"
